--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+
+---
+title: "probando los blogs de github"
+date: 2019-03-29
+---
 title: probando los blogs de github
 author: cayt
 email: your-email@domain.com
